Add content, style, minus responsive

--- a/mock2html.html
+++ b/mock2html.html
@@ -4,6 +4,27 @@
 </head>
 
 <body>
-  hello world
+  <div class="container">
+    <div class="service-option">
+      <h1>Service Options</h1>
+      <div class="monthly">
+        <div class="content">
+          <h2>Monthly Service</h2>
+          <div class="pricing">$9.95/month + $14.95 activation fee</div>
+          <a class="buy-button" href="">Buy Now</a>
+        </div>
+      </div>
+    </div>
+    <div class="service-option">
+      <div class="prepaid">
+        <div class="content">
+          <h2>Save $30 on 1 year of prepaid service*</h2>
+          <div class="pricing"><strike>$119</strike> $89 for the first year*</div>
+          <p>*After the first year, monthly service charges ($9.95/month) apply.</p>
+          <a class="buy-button" href="">Buy Now</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
