Add link to buy now buttons

--- a/mock2html.html
+++ b/mock2html.html
@@ -11,7 +11,7 @@
         <div class="content">
           <h2>Monthly Service</h2>
           <div class="pricing">$9.95/month + $14.95 activation fee</div>
-          <a class="buy-button" href="">Buy Now</a>
+          <a class="buy-button" href="http://www.whistle.com/">Buy Now</a>
         </div>
       </div>
     </div>
@@ -21,7 +21,7 @@
           <h2>Save $30 on 1 year of prepaid service*</h2>
           <div class="pricing"><strike>$119</strike> $89 for the first year*</div>
           <p>*After the first year, monthly service charges ($9.95/month) apply.</p>
-          <a class="buy-button" href="">Buy Now</a>
+          <a class="buy-button" href="http://www.whistle.com/">Buy Now</a>
         </div>
       </div>
     </div>
