--- a/mock2html.html
+++ b/mock2html.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="mock2html.css">
+  <title>Whistle - Service Options</title>
 </head>
 
 <body>
